[package]
name = "polars"
version = "0.1.0"
edition = "2021"

[dependencies]
blackscholes = "0.24.0"

[dependencies.clap]
version = "4.4.6"
features = ["derive"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.polars]
version = "0.33.2"
features = [
    "lazy",
    "dtype-datetime",
    "dtype-struct",
    "strings",
    "lazy_regex",
]

